2003-09-18  Chengye Mao <chengye.geo@yahoo.com>
        * generic/tkConsole.c: Fixed memroy leak [Bug 802435]

2003-09-18  Peter Spjuth  <peter.spjuth@space.se>
	* doc/grid.n:
	* tests/grid.test:
	* generic/tkGrid.c: Implementation of TIP#147,
	"Make Grid's Column/Row Configure Easier".

2003-09-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkImage.c:	Stopped [image create] from generating an
	* tests/image.test:	image command name that would overwrite an
	existing command name.  Thanks to Michael Schlenker.  [Bug 808039].

2003-09-16  Peter Spjuth  <peter.spjuth@space.se>
	* tests/grid.test:
	* generic/tkGrid.c: Reworked a part of grid's geometry computations
	to handle some tricky cases better. [Bug #792387]

2003-09-05  Joe English  <jenglish@users.sourceforge.net>
	* doc/bind.n: Describe %P and %s substitution for
	Property events. [BUG #577906 "%P substitution not documented"]

2003-09-05  Don Porter  <dgp@users.sourceforge.net>

	* doc/wish.1:			Implementation of TIPs 137/151.
	* generic/tkMain.c (Tk_MainEx):	Added recognition of the -encoding
	* tests/main.test:		command line option by Tk_MainEx()
	and thus by wish, and any other program built on Tk_MainEx().
	[Patch 800139].
        This is a ***POTENTIAL INCOMPATIBILITY*** only for those C programs
        that embed Tcl and Tk, build on Tk_MainEx(), and make use of
	Tk_MainEx's former ability to pass a leading "-encoding" option to
	interactive shell operations.

2003-08-27  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkListbox.c (ListboxSelect): Remove unused variable
	'increment'.  [Bug 664783]

2003-08-25   David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc: Don't do a string compare on the $(DBGX)
	variable, use the $(DEBUG) boolean directly.  Also, don't try
	to regen the stubs table if $(TCLSH) doesn't exist.

2003-08-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/demos/msgbox.tcl: Brought into line with the newer
	look-and-feel for the demos.