@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tk installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.88 2003/06/02 16:13:13 jenglish Exp $
+# RCS: @(#) $Id: configure.in,v 1.89 2003/09/25 05:36:08 das Exp $
 
 AC_INIT(../generic/tk.h)
 AC_PREREQ(2.57)
@@ -398,6 +398,9 @@ TK_STUB_LIB_SPEC="-L${libdir} ${TK_STUB_LIB_FLAG}"
 TK_BUILD_STUB_LIB_PATH="`pwd`/${TK_STUB_LIB_FILE}"
 TK_STUB_LIB_PATH="${libdir}/${TK_STUB_LIB_FILE}"
 
+# Install time header dir can be set via --includedir
+eval "TK_INCLUDE_SPEC=\"-I${includedir}\""
+
 eval "TK_LIB_FILE=${TK_LIB_FILE}"
 
 AC_SUBST(TK_VERSION)
@@ -426,6 +429,7 @@ AC_SUBST(TK_BUILD_LIB_SPEC)
 AC_SUBST(TK_LIB_FILE)
 AC_SUBST(TK_LIB_FLAG)
 AC_SUBST(TK_LIB_SPEC)
+AC_SUBST(TK_INCLUDE_SPEC)
 AC_SUBST(TK_SRC_DIR)
 AC_SUBST(XINCLUDES)
 AC_SUBST(XLIBSW)
